basic mobile stuff and fixing navbar z-index

--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,8 @@ body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
 }
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
-  }
-}
 #navbar {
+  z-index: 999;
   display: flex;
   color: white;
   background-color: #009688;
@@ -124,6 +120,7 @@ i:hover {
 
 .large-project-div {
   display: flex;
+  flex-direction: row;
 }
 
 .testing {
@@ -134,4 +131,11 @@ i:hover {
   background-color: rgba(255, 255, 255, .6);
   backdrop-filter: blur(3px);
   width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .large-project-div {
+    display: flex;
+    flex-direction: column;
+  }
 }
